# ecommerce-price-index-bigdata

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd_pipeline.yml
config/: .env.example  config.yaml.template
docs/: 实践工作日志.md  实践总结报告.md  设计文档.md  项目综合分析报告.md
docs/assets/: .gitkeep
src/clickhouse_process/: ck_price_calc.py
src/data_generation/: data_generator.py  validate_data.py
src/oss_operation/: oss_upload.py
src/visualization/: draw_cpi_trend.py
tests/: conftest.py  test_ck_sql.py  test_oss_connect.py  test_validate_data.py
tests/test_data/: .gitkeep  test_category.csv  test_price.csv  test_product.csv
